--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,20 @@
 {
   "dependencies": {
-    "moongose": "^1.0.0"
-  }
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.0",
+    "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-cache  --detectOpenHandles --runInBand --forceExit"
+  },
+  "devDependencies": {
+    "jest": "^29.2.2",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.1"
+  },
+  "type": "module",
+  "transform": {}
 }
